# local-wipser-test

./: README.md  main.py  pyproject.toml  v3_v_v3Turbo.md  whisper_pc_requirements.md
