[project]
name = "local-wisper-test-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ctranslate2>=4.6.0",
    "faster-whisper>=1.1.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "codespell>=2.4.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
]
